AC_PREREQ(2.52)

AC_INIT(README)
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE(gformat, 0.1)

AC_PROG_INTLTOOL([0.31])
AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_C_INLINE
AC_STDC_HEADERS
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")
AC_CONFIG_SRCDIR(src)
AC_CONFIG_HEADERS(config.h)

AM_MAINTAINER_MODE

GLIB_REQUIRED=2.9.1
GTK_REQUIRED=2.8.0
LIBGLADE_REQUIRED=2.3.0


dnl *************** NOTE *****************
dnl This is just a temporary file until this gets merged with gnome-utils
dnl Once that happens, we don't need it anymore


dnl ---------------- Gettext Stuff -------------------------
GETTEXT_PACKAGE=gformat
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="fr"
AM_GLIB_GNU_GETTEXT
GLIB_DEFINE_LOCALEDIR(LOCALEDIR)

AC_CHECK_HEADER(linux/fd.h,
		AC_DEFINE([HAVE_LINUX_FD_H], [1], [Define whether we have linux/fd.h]),
		build_gfloppy=false
                AC_MSG_WARN([*** gfloppy will not be built.]))

PKG_CHECK_MODULES(GFLOPPY, 
		  glib-2.0 >= $GLIB_REQUIRED 
		  gtk+-2.0 >= $GTK_REQUIRED 
		  hal-storage >= 0.5.8.1 
		  hal >= 0.5.8.1 
		  libglade-2.0 >= $LIBGLADE_REQUIRED
		  libgnomeui-2.0 >= 2.10)
AC_SUBST(GFLOPPY_CFLAGS)
AC_SUBST(GFLOPPY_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
./doc/gfloppy.omf
./intltool-merge
./intltool-extract
./gformat.schemas
./intltool-update
])
