AC_INIT(README)
AC_PREREQ(2.59)

AC_CANONICAL_HOST

AC_CONFIG_SRCDIR(src)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-format, 0.2)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.35])

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC

AM_PROG_LIBTOOL

GLIB_REQUIRED=2.9.1
GTK_REQUIRED=2.8.0
LIBGLADE_REQUIRED=2.3.0


dnl *************** NOTE *****************
dnl This is just a temporary file until this gets merged with gnome-utils
dnl Once that happens, we don't need it anymore


dnl ---------------- Gettext Stuff -------------------------
GETTEXT_PACKAGE=gnome-format
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="fr"
AM_GLIB_GNU_GETTEXT
GLIB_DEFINE_LOCALEDIR(LOCALEDIR)

AC_CHECK_LIB(parted, ped_get_version, [], AC_MSG_ERROR([*** parted library (libparted) not found]))
AC_CHECK_DECL(PED_DEVICE_UBD, [], AC_MSG_ERROR([*** Requires libparted >= 1.6.25]), [#include <parted/parted.h>])

AC_CHECK_LIB(uuid, uuid_generate, [], AC_MSG_ERROR([*** uuid library (libuuid) not found]))

PKG_CHECK_MODULES(GFORMAT, 
		  glib-2.0 >= $GLIB_REQUIRED 
		  gtk+-2.0 >= $GTK_REQUIRED 
		  hal-storage >= 0.5.8.1 
		  hal >= 0.5.8.1 
		  libglade-2.0 >= $LIBGLADE_REQUIRED
		  libgnomeui-2.0 >= 2.10
		  gnome-vfs-2.0 >= 2.16 )
AC_SUBST(GFORMAT_CFLAGS)
AC_SUBST(GFORMAT_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
gnome-format.desktop.in
])

